# WaGraphic

./: Cargo.toml  LICENSE  README.md  index.html  index.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
src/: gl_setup.rs  lib.rs  store.rs  tools.rs
src/programs/: color_2d.rs  color_2d_gradient.rs  graph_3d.rs
src/shaders/fragment/: color_2d_gradient.rs
src/shaders/vertex/: graph_3d.rs
